fixed the <Error /> not showing up problem
the issue was in the conditions to render the empty.  <Empty> was rendering first because the conditions weren't specific enough in the if statement

--- a/src/index.css
+++ b/src/index.css
@@ -233,7 +233,7 @@ DAY CARD STYLES
 }
 
 .day.expanded .expandedDay{
-   display: block;
+   display: grid;
    width: 100%;
    height: 100%;
    padding: 25px;
